# gramine-svsm

./: Dockerfile  Makefile  build.sh  gramine.spec  meson.build  meson_options.txt  rebuild.sh  setup.sh
CI-Examples/helloworld/: helloworld.c  helloworld.manifest.template  test.txt
CI-Examples/python/: python.manifest.template
common/include/: embedded_files.h
implementation-roadmap/: gramine-implementation-roadmap.md
libos/include/: libos_fs_pseudo.h
libos/src/: meson.build
libos/src/fs/: libos_fs.c  libos_fs_pseudo.c
libos/src/fs/lib/: fs.c  libblas.c  libbz2.c  libcrypt.c  libdl.c  libexpat.c  libffi.c  libgcc_s.c  libgdbm.c  libgdbm_compat.c  liblzma.c  libncursesw.c  libpthread.c  librt.c  libtinfo.c  libutil.c  libuuid.c  libz.c
libos/src/fs/python/: fs.c  python todo.txt
pal/regression/: meson.build
pal/src/host/: meson.build
pal/src/host/linux/: pal_files.c  pal_host.h
pal/src/host/svsm/: meson.build  pal_main.c  pal_monitor_call.c  pal_monitor_call.h  pal_svsm.h
pal/src/host/svsm/arch/x86_64/: meson.build  pal_start.S
python/graminelibos/: manifest_check.py
tools/: meson.build
